# dynamodb-adapter

./: Cargo.toml  README.md
examples/: global_rbac_model.conf
src/: adapter.rs  errors.rs  lib.rs
