[package]
name = "dynamodb-adapter"
version = "0.1.0"
authors = ["Fabio Ospitia Trujillo <fospitia@gmail.com>"]
edition = "2018"
description = "AWS DynamoDB adapter for casbin-rs"
license-file = "LICENSE"
readme = "README.md"
homepage = "https://github.com/fospitia/dynamodb-adapter"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.12.0", default-features = false, optional = true }
async-trait = "0.1.57"
aws-sdk-dynamodb = "0.18.0"
casbin = { version = "2.0.9", default-features = false }
md5 = "0.7.0"
tokio = { version = "1.21.0", default-features = false, optional = true }
tokio-stream = "0.1.9"

[dev-dependencies]
aws-config = "0.48.0"
casbin = { version = "2.0.9", default-features = false, features = ["glob"] }
http = "0.2.8"
tokio = { version = "1.21.0", features = ["full"] }

[features]
default = ["runtime-tokio"]
runtime-tokio     = ["casbin/runtime-tokio", "tokio/rt"]
